# clean-architecture-email-server

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  example.env  mypy.ini  pyproject.toml
bigquery/views/: email_data_view.sql
cloudbuild/: cloudbuild_on_pr.yaml  cloudbuild_on_push_dev.yaml  cloudbuild_settings.yaml
k8s/: email-server-deployment.yaml  email-server-hpa.yaml  email-server-namespace.yaml  email-server-service.yaml
postman_collections/: email-server.postman_collection.json
src/: container.py  main.py
src/adapter/inward/web/filter_email/: filter_email_request_controller.py  filter_email_schema.py
src/adapter/inward/web/query_email/: send_email_schema.py
src/adapter/inward/web/send_email/: queue_email_request_controller.py  send_email_controller.py  user_email_request_controller.py
src/adapter/outward/filter_email/: filter_email_adapter.py  filter_email_adpter.py  query_builder.py
src/adapter/outward/integration/: send_email_adapter.py
src/adapter/outward/persistence/: db_client.py  email_repository.py  save_email_adapter.py  update_email_state_adapter.py
src/adapter/outward/queue/: email_queue_producer_adapter.py  email_queue_publisher_adapter.py
src/adapter/outward/send_email/: attachment_db_client.py  email_message_builder.py  send_email_adapter.py  storage_client.py
src/app/domain/entity/email/: __init__.py
test/adapter/outward/persistence/: test_email_repository.py  test_email_repository_with_firestore.py
test/adapter/outward/queue/: test_queue_publisher_with_pub_sub.py
(+75 files in other folders)
