[tool.poetry]
name = "email-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
mypy = "^1.11.1"
pre-commit = "^3.8.0"
ruff = "^0.5.5"
dependency-injector = "^4.41.0"
httpx = "^0.27.0"
google-cloud-firestore = "^2.17.2"
google-auth = "^2.34.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-cloud-pubsub = "^2.23.0"
google-cloud-storage = "^2.18.2"
google-cloud-bigquery = "^3.25.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
